# puppybot

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  dockerfile  format.sh  main.c  migrate.ts  missing_safety_tests.md  package-lock.json  package.json  prepare-agent.sh  readme.md  repomix.sh  run.sh  test.sh  tsconfig.json
.github/workflows/: android-build.yml  android-release.yml  esp32-build.yml  publish-release.yml  server-build.yml
.zed/: settings.json  tasks.json
android/: README.md  build.gradle.kts  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
design/: puppybot.kicad_pcb  puppybot.kicad_pro  puppybot.kicad_sch
docs/: puppybot-protocol.md
esp32/: CMakeLists.txt  build.sh  partitions.csv  sdkconfig  sdkconfig.old
esp32/main/: CMakeLists.txt  bluetooth.c  bluetooth.h  comm_esp32.c  command.c  command.h  http_espidf.c  idf_component.yml  log_esp32.c  main.c  motor.c  motor.h  motor_hw_esp32.c  ota.h  platform_esp32.c  timer_esp32.c  variant_config.h  wifi.h  ws.c  ws.h
examples/puppybot-circles/: Cargo.toml  README.md
examples/puppybot-circles/src/: main.rs
fleet/: bot-protocol.test.ts  bot-protocol.ts  config-templates.ts  config.ts  db.ts  main.ts  mdns.ts  pbcl.ts  types.ts
fleet/web/: app.ts  arm.ts  bot.ts  index.html  navbar.ts  router.ts  rover.ts  state.ts  styles.css  wsclient.ts
migrations/: 2025011500_add_bots_table.sql
models/: models  water-bottle-LICENSE.md
models/puppybot/: README.md  robotdreams.json
mothership/: bot-protocol.test.ts  bot-protocol.ts  config.ts  main.ts  mdns.ts  types.ts
mothership/web/: app.ts  arm.ts  bots.ts  index.html  navbar.ts  styles.css  ui.ts
puppybot/: .env.example  .gitignore  Cargo.toml  README.md
puppybot/.cargo/: config.toml
puppybot/cli/: Cargo.toml
puppybot/cli/src/: client.rs  main.rs
puppybot/collision-tools/: Cargo.toml
puppybot/collision-tools/src/: main.rs
puppybot/core/: Cargo.toml
puppybot/core/.cargo/: config.toml
puppybot/core/src/: config.rs  lib.rs  protocol.rs  robot.rs  system.rs  utility.rs
puppybot/core/src/drive/: mod.rs
puppybot/core/src/puppyarm/: arm.rs  controller.rs  kinematics.rs  mod.rs  puppyarm.rs  servo_safety.rs  state_engine.rs  tests.rs  types.rs
puppybot/core/src/stservo/: mock.rs  mod.rs
puppybot/esp32/: Cargo.toml  build.rs
puppybot/esp32/src/: app.rs  lib.rs  main.rs  mdns.rs  ws.rs
puppybot/esp32/src/puppyarm/: mod.rs  task.rs
puppybot/esp32/src/stservo/: esp32.rs  mod.rs
puppybot/host/: Cargo.toml
puppybot/host/src/: main.rs
puppybot/runtime/: AGENTS.md  Cargo.toml  puppybot.json  puppybot.sim.json
puppybot/runtime/src/: app.rs  args.rs  capture.rs  config.rs  dc_motor_driver.rs  env.rs  http.rs  lib.rs  main.rs  mdns.rs  robotdreams_drive.rs  sim.rs  sim_calibration.rs  stservo.rs  ui.rs  ws.rs
puppybot/runtime/wui/: runtime.css  runtime.wui
puppybot/scenarios/: README.md  arm_control_actor.py  bottle_to_bin.robotdreams.template.json  bottle_to_bin_yolo.py  capture_robotdreams_calibration.py  generate_final2_collision_manifest.py  judge_bottle_to_bin.py  make_bottle_yolo_dataset.py  make_tinygrad_bottle_dataset.py  make_tinygrad_bottle_dataset_v2.py  make_tinygrad_bottle_v3_corpus.py  make_tinygrad_bottle_v6_corpus.py  make_tinygrad_bottle_v7_corpus.py  make_tinygrad_v7_scenes.py  place_ball_to_bin.py  place_ball_to_bin.robotdreams.json  place_ball_to_bin_sim.py  requirements-yolo.txt  run_bottle_to_bin_episode.py  test_bottle_to_bin_yolo.py  test_final2_collision_manifest.py  test_physics_fixture.py  test_robotdreams_calibration_capture.py  tinygrad-bottle-v1.json  tinygrad_bottle_detector.py  tinygrad_bottle_detector_v5.py  validate_arm_sim_suite.py  validate_move_tcp.py  yolo11n-model-manifest.json
puppybot/scripts/: README.md  attach-tinygrad-v6-detector.sh  build.sh  flash.sh  install.sh  monitor.sh  run-host.sh  run-runtime.sh  run-tinygrad-v6-sim-episode.sh  test-host.sh  test-runtime.sh
puppybot/src/: host.rs  lib.rs  main.rs  protocol.rs  stservo.rs  utility.rs  ws.rs
puppybot/src/puppyarm/: controller.rs  mod.rs  puppyarm.rs  servo_safety.rs  state_engine.rs  task.rs  test.rs
puppybot/src/stservo/: esp32.rs  mock.rs  mod.rs
python/: assign_servo_id.py  scan_ids.py  servobus.py
robotdreams/: README.md  project.json  puppybot-physics-prototype.json  robotdreams
robotdreams/calibration/: README.md  robotdreams.calibration.v1.template.json  servo-trace.csv.template
robotdreams/collision/: README.md  final2-link-collider-manifest.v1.json  final2-link-collision-profile.v1.json
scripts/: build_version.sh
server/: README.md  app.ts  bot-protocol.test.ts  bot-protocol.ts  bot.ts  bots.ts  config-templates.ts  config.ts  migrations.ts  package-lock.json  package.json  pbcl.ts  router.ts  server.ts  state.ts  tsconfig.json  types.ts  ui.ts  utility .ts  wsclient.ts
src/: app_tests.c  arm_ik.h  cmd.h  comm.h  command_handler.c  command_handler.h  espidf_stubs.c  espidf_stubs.h  hardware.h  http.c  http.h  http_host.c  log.h  log_host.c  main.c  main.h  motor_config.h  motor_hw.c  motor_hw.h  motor_hw_stub.c  motor_runtime.c  motor_runtime.h  motor_runtime_tests.c  motor_slots.c  motor_slots.h  motor_tests.c  pbcl.h  pbcl_motor_handler.c  pbcl_motor_handler.h  pbcl_tags.h  pbcl_tests.c  platform.h  protocol.h  puppy_app.c  puppy_app.h  test.h  test_main.c  timer.h  timer_host.c  utility.c  (+2 more)
src/app/: arm_ik.c  command_handler.c  http.c  main.c  motor_config.c  motor_runtime.c  motor_slots.c  pbcl_motor_handler.c
src/puppyarm/: puppyarm.c  puppyarm.h  puppyarm_calibration.h  puppyarm_controller.c  puppyarm_controller.h  puppyarm_kinematics.c  puppyarm_kinematics.h  puppyarm_profile.h
src/tests/: app_tests.c  arm_ik_tests.c  (+4 more)
tests/robotdreams/: Cargo.toml
tests/robotdreams/tests/: arm.rs  drive.rs  scene.rs
tests/robotdreams/tests/puppybot_state/: mod.rs
tests/robotdreams/tests/support/: harness.rs
web/: app.ts  bot.ts  bots.ts  index.html  state.ts  ui.ts  utility .ts  wsclient.ts
(+830 files in other folders)
