[workspace]
resolver = "2"
default-members = ["esp32"]
members = ["core", "esp32", "runtime"]

[profile.release]
opt-level = "s"
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1

[profile.dev]
debug = true
opt-level = "z"

[profile.dev.package.esp-radio]
opt-level = 3

[profile.release.package.esp-radio]
opt-level = 3
