[workspace]
resolver = "2"
default-members = ["runtime"]
members = ["core", "runtime", "cli", "collision-tools"]
exclude = ["esp32"]

[profile.release]
opt-level = "s"
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1

[profile.perf]
inherits = "release"
opt-level = 3
debug = "line-tables-only"
debug-assertions = false
lto = "thin"
codegen-units = 16

[profile.dev]
debug = true
opt-level = "z"
