[package]
name = "puppybot-circles"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace]

[dependencies]
puppybot-core = { path = "../../puppybot/core", default-features = false, features = ["runtime"] }
pge-video = { git = "https://github.com/puppycorp/pge.git", rev = "a2c115faef8956602b2b8b670afcb56c18b18be9" }
robotdreams-core = { path = "../../../RobotDreams/core" }
robotdreams-renderer = { path = "../../../RobotDreams/renderer" }
serde_json = "1"
