[package]
name = "puppybot-circles"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace]

[dependencies]
puppybot-core = { path = "../../puppybot/core", default-features = false, features = ["runtime"] }
pge-core = { git = "https://github.com/puppycorp/pge.git", rev = "d0c0e7231b92af47c9dd2daa2cb53b2ceae61c6a" }
pge-renderer = { git = "https://github.com/puppycorp/pge.git", rev = "d0c0e7231b92af47c9dd2daa2cb53b2ceae61c6a" }
pge-video = { git = "https://github.com/puppycorp/pge.git", rev = "d0c0e7231b92af47c9dd2daa2cb53b2ceae61c6a" }
pge-wgpu-renderer = { git = "https://github.com/puppycorp/pge.git", rev = "d0c0e7231b92af47c9dd2daa2cb53b2ceae61c6a" }
robotdreams-core = { path = "../../../RobotDreams/core" }
serde_json = "1"
