[package]
name = "puppybot"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "puppybot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
puppybot-core = { path = "../core", default-features = false, features = ["runtime"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.21"
