[package]
name = "puppybot-collision-tools"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "puppybot-pge-link-collider-report"
path = "src/main.rs"

[dependencies]
pge-collision = { path = "../../../pge/pge-collision" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
