[package]
name = "puppybot-collision-tools"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "puppybot-pge-link-collider-report"
path = "src/main.rs"

[dependencies]
pge-collision = { git = "https://github.com/puppycorp/pge.git", rev = "b4c98639d80aa02b3b4f335f56979f50544e34d2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
