[package]
name = "puppybot-core"
version = "0.1.0"
edition = "2024"
resolver = "2"
rust-version = "1.88"

[dependencies]
embassy-time = "0.5.0"
libm = "0.2"
log = "0.4"

[dev-dependencies]
embassy-executor = { version = "0.10.0", features = [
    "embassy-time-driver",
    "executor-thread",
    "platform-std",
] }

[features]
default = ["host"]
host = ["embassy-time/std"]
