[package]
name = "puppybot-esp32"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "puppybot"
path = "src/main.rs"
harness = false

[dependencies]
embassy-executor = { version = "0.10.0", optional = true }
embassy-futures = { version = "0.1.2", optional = true }
embassy-net = { version = "0.9.0", optional = true, features = [
    "dhcpv4",
    "medium-ethernet",
    "multicast",
    "tcp",
    "udp",
] }
embassy-sync = { version = "0.8.0", optional = true }
embassy-time = "0.5.0"
esp-alloc = { version = "0.10.0", optional = true }
esp-backtrace = { version = "0.19.0", optional = true, features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5.0", optional = true }
esp-hal = { version = "1.1.1", optional = true, features = ["log-04", "unstable"] }
esp-println = { version = "0.17.0", optional = true, features = ["log-04"] }
esp-radio = { version = "0.18.0", optional = true, features = ["log-04", "wifi"] }
esp-rtos = { version = "0.3.0", optional = true, features = ["embassy", "esp-radio", "log-04"] }
log = "0.4"
puppybot-core = { path = "../core", default-features = false }
sha1 = { version = "0.11.0", default-features = false }
static_cell = { version = "2.1.1", optional = true }

[features]
default = ["esp32"]
esp32 = [
    "dep:embassy-executor",
    "dep:embassy-futures",
    "dep:embassy-net",
    "dep:embassy-sync",
    "dep:esp-alloc",
    "dep:esp-backtrace",
    "dep:esp-bootloader-esp-idf",
    "dep:esp-hal",
    "dep:esp-println",
    "dep:esp-radio",
    "dep:esp-rtos",
    "dep:static_cell",
    "esp-alloc/esp32",
    "esp-backtrace/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-hal/esp32",
    "esp-radio/esp32",
    "esp-rtos/esp32",
    "esp-println/esp32",
]
