[package]
name = "puppybot-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
embassy-executor = { version = "0.10.0", features = [
    "embassy-time-driver",
    "executor-thread",
    "platform-std",
] }
embassy-time = "0.5.0"
env_logger = "0.11"
log = "0.4"
mdns-sd = "0.20"
puppybot-core = { path = "../core", default-features = false, features = ["runtime"] }
serialport = { version = "4.7", default-features = false }
serde_json = "1"
sha1 = { version = "0.11.0", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }
wgui = { git = "https://github.com/J45k4/wgui.git", rev = "c9a30a931385fd8a51a3ec782841934a26bfa51c" }
