[package]
name = "puppybot-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
embassy-executor = { version = "0.10.0", features = [
    "embassy-time-driver",
    "executor-thread",
    "platform-std",
] }
embassy-time = "0.5.0"
env_logger = "0.11"
log = "0.4"
mdns-sd = "0.20"
puppybot-core = { path = "../core", default-features = false, features = ["runtime"] }
robotdreams-core = { path = "../../../RobotDreams/core" }
pge-app = { path = "../../../pge/pge-app" }
pge-core = { path = "../../../pge/pge-core" }
pge-renderer = { path = "../../../pge/pge-renderer" }
pge-video = { path = "../../../pge/pge-video" }
pge-wgpu-renderer = { path = "../../../pge/pge-wgpu-renderer" }
serialport = { version = "4.7", default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha1 = { version = "0.11.0", default-features = false }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
wgui = { path = "../../../wgui/wgui" }
