[package]
name = "puppybot-robotdreams-tests"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dev-dependencies]
puppybot-core = { path = "../../puppybot/core", default-features = false, features = ["runtime"] }
robotdreams-core = { git = "https://github.com/puppycorp/RobotDreams.git", rev = "e1349a0575082b811a1ef756f2b6bc913b0f2c96" }
serde_json = "1"
